# chaindexing-rs

./: .env.sample  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  docker-compose.yml  renovate.json  rustfmt.toml  test-ci-locally.sh
.github/workflows/: ci.yml
chain-reorg/: Cargo.toml
chain-reorg/src/: lib.rs
chaindexing/: Cargo.toml
chaindexing-diesel/: Cargo.toml
chaindexing-diesel/src/: lib.rs
chaindexing-macros/: Cargo.toml
chaindexing-macros/src/: lib.rs
chaindexing-tests/: Cargo.toml
chaindexing-tests/src/: db.rs  factory.rs  lib.rs  main.rs  test_runner.rs  tests.rs
chaindexing-tests/src/factory/: contract_states.rs  contracts.rs  event_handlers.rs  events.rs  handlers.rs  json_rpcs.rs  providers.rs
chaindexing-tests/src/tests/: contract_states.rs  events_ingester.rs  handlers.rs  ingester.rs  repos.rs  states.rs
chaindexing-tests/src/tests/repos/: postgres_repo.rs
chaindexing/src/: augmenting_std.rs  booting.rs  chain_reorg.rs  chains.rs  config.rs  contract_states.rs  contracts.rs  deferred_futures.rs  diesel.rs  event_handler_subscriptions.rs  event_handlers.rs  events.rs  events_ingester.rs  handler_subscriptions.rs  handlers.rs  hashes.rs  ingester.rs  lib.rs  node_task.rs  nodes.rs  pruning.rs  repos.rs  reset_counts.rs  root.rs  setup.rs  state_bus.rs  states.rs
chaindexing/src/contract_states/: migrations.rs  state_versions.rs  state_views.rs
chaindexing/src/diesel/: schema.rs
chaindexing/src/diesels/: schema.rs
chaindexing/src/event_handlers/: handle_events.rs  handled_events.rs  maybe_handle_chain_reorg.rs
chaindexing/src/events/: event.rs
chaindexing/src/events_ingester/: error.rs  filters.rs  ingest_events.rs  ingested_events.rs  maybe_handle_chain_reorg.rs  provider.rs
chaindexing/src/handlers/: handle_events.rs  handler_context.rs  maybe_handle_chain_reorg.rs  pure_handler.rs  side_effect_handler.rs
chaindexing/src/ingester/: error.rs  filters.rs  ingest_events.rs  maybe_handle_chain_reorg.rs  provider.rs
chaindexing/src/nodes/: node.rs  node_heartbeat.rs  node_task.rs  node_tasks.rs  node_tasks_runner.rs
chaindexing/src/repos/: postgres_repo.rs  repo.rs  streams.rs
chaindexing/src/repos/postgres_repo/: migrations.rs  raw_queries.rs
chaindexing/src/states/: chain_state.rs  contract_state.rs  filters.rs  migrations.rs  multi_chain_state.rs  state.rs  state_versions.rs  state_views.rs  updates.rs
chains/: Cargo.toml
config/: Cargo.toml
config/src/: error.rs  lib.rs  optimization_config.rs  pruning_config.rs
contract-state-migrations/: Cargo.toml
contract-state-migrations/src/: lib.rs
contract-state-tables/: Cargo.toml
contract-state-tables/src/: lib.rs
contract-states/: Cargo.toml
contract-states/src/: lib.rs  state_version.rs  state_versions.rs  state_view.rs  state_views.rs
contracts/: Cargo.toml
contracts/src/: lib.rs
diesel-streamer2/: Cargo.toml
diesel-streamer2/src/: async_serial_table_streamer.rs  lib.rs
event-handler/: Cargo.toml
event-handler/src/: lib.rs
events/: Cargo.toml
events-ingester/: Cargo.toml
events-ingester/src/: error.rs  filters.rs  lib.rs  provider.rs  tasks.rs
events-ingester/src/tasks/: ingest_events.rs
events/src/: event.rs
nodes/: Cargo.toml
nodes/src/: keep_node_active_request.rs  lib.rs  node.rs  node_tasks.rs
postgres-repo/: Cargo.toml
postgres-repo/src/: lib.rs  migrations.rs  raw_queries.rs  repo.rs  streams.rs
repo/: Cargo.toml
repo-transaction-clients/: Cargo.toml
repo-transaction-clients/src/: lib.rs
repo/src/: lib.rs  migrations.rs  raw_queries.rs  streams.rs
repos/: Cargo.toml
repos/src/: lib.rs
resets/: Cargo.toml
resets/src/: lib.rs
src/: chains.rs  contracts.rs  events.rs  events_ingester.rs  lib.rs  repos.rs
src/diesel/: schema.rs
src/repos/: postgres_repo.rs  repo.rs
