[package]
name = "chaindexing-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
chaindexing = { path = "../chaindexing", features = ["postgres"] }
ethers = "2.0"
futures-util = "0.3.30"
dotenvy = "0.15"
diesel = { version = "2", features = ["postgres", "chrono"] }
rand = "0.8.5"
tokio = { version = "1.37", features = ["full"] }

