[package]
name = "chaindexing"
version = "0.1.44"
edition = "2021"
description = "Access EVM chain data with SQL"
license = "MIT OR Apache-2.0"
readme="../README.md"
repository = "https://github.com/chaindexing/chaindexing-rs"

[features]
default = ["postgres"]
postgres = []

[dependencies]
async-trait = "0.1"
bb8 = "0.8"
derive_more = "0.99"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "uuid", "sqlite", "chrono", "r2d2", "serde_json"] }
diesel-async = { version = "0.4", features = ["bb8", "postgres", "deadpool"] }
diesel-streamer = { version = "0.1.12", features = ["async"] }
pin-project-lite = "0.2.13"
ethers = "2.0"
serde = "1"
serde_json = "1"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"]}
tokio = "1.29"
uuid = { version = "1", features = ["v4", "serde"] }
futures-core = { version = "0.3", features = ["alloc"] }
futures-util = "0.3"

