[package]
name = "chaindexing"
version = "0.1.72"
edition = "2021"
description = "Index any EVM chain and query with SQL"
license = "MIT OR Apache-2.0"
readme="../README.md"
repository = "https://github.com/chaindexing/chaindexing-rs"

[features]
default = ["postgres"]
postgres = []

[dependencies]
async-trait = "0.1"
bb8 = "0.8"
derive_more = "0.99"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel-async = { version = "0.4", features = ["bb8", "postgres"] }
pin-project-lite = "0.2.13"
ethers = "2.0"
serde = "1"
serde_json = "1"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"]}
tokio = { version = "1.37", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures-core = { version = "0.3", features = ["alloc"] }
futures-util = "0.3"

